syntax = "proto3";

import "google/protobuf/empty.proto";

package proto;

service JoyciCore {
    rpc GitClone(GitCloneRequest) returns (google.protobuf.Empty);
    rpc ExecuteCommands(ExecuteCommandsRequest) returns (google.protobuf.Empty);
}

message GitCloneRequest {
    string applicationName = 1;
    string jobDir = 2;
    string repository = 3;
}

message ExecuteCommandsRequest {
    string applicationName = 1;
    string jobDir = 2;
    repeated string commands = 3;
}
